fix not centered heatmaps

--- a/src/style/charts.module.css
+++ b/src/style/charts.module.css
@@ -67,3 +67,9 @@
     color: colorAccentBlack;
     opacity: 1;
 }
+
+.vegaHeatmapsContainer{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
